fix content shift

--- a/src/css/style/blocks/_landing.scss
+++ b/src/css/style/blocks/_landing.scss
@@ -23,6 +23,31 @@
 	}    	
 }
 
+.landing__content-wrapper--shifted{
+	max-width: none;
+	margin-left: -$aside-tooltip-width;	
+	margin-right: -$aside-tooltip-width;
+	padding-left: $aside-tooltip-width;	
+	.landing__content{
+		width: 100vw;
+		max-width: none;
+		& * {
+			max-width: none;
+		}			
+	}
+	.landing__header{
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		& > .page__wrapper{
+			width: 100vw;
+			max-width: none;
+			margin-left: 0;
+			margin-right: 0;			
+		}
+	}
+}
+
 .landing__content{
 	display: flex; /*fix бага ie11 с min-height:100%*/
 	flex-direction: column;
@@ -105,15 +130,6 @@
 	}			
 }
 
-
-.landing__content--shifted{
-	width: 100vw;
-	max-width: none;
-	& * {
-		max-width: none;
-	}
-}
-
 .landing__aside-wrapper{
 	width: 340px;
 	transition: width $anim-dur;
@@ -131,7 +147,7 @@
 .landing__aside{
 	flex-shrink: 0;
 	min-height: 100vh;
-	width: 350px;
+	width: 340px;
 	max-width: none;
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -221,7 +237,7 @@
 
 .landing__aside-menu{
 	max-width: none;
-	margin-left: -40px;
+	margin-left: -40px + $aside-tooltip-width;
 	margin-right: -40px;
 	color: $gray_747;
 	font-size: 14px;
@@ -269,7 +285,7 @@
 		}		
 	}
 	@include media-breakpoint-up(lg) {
-
+		margin-left: -40px;
 	}	
 }
 
